# sophys-common

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: documentation.yml  pre-commit.yml  qa_testing.yml  testing.yml
docs/: .gitignore  Makefile  build_docs.sh  docs-requirements.txt
docs/source/: annotated_plans.rst  architecture.rst  conf.py  devices.area_detector.rst  devices.misc_detector.rst  devices.rst  devices_area_detector.rst  devices_controllers.rst  devices_detectors.rst  devices_misc.rst  devices_misc_detector.rst  devices_motors.rst  example_plans.rst  index.rst  plans.rst  utils.rst
docs/source/_templates/: device_attr_list.rst  device_attr_list_embed.rst
lnls_ophyd/: utils.py
lnls_ophyd/area_detector/: pilatus_300k.py
lnls_ophyd/area_detectors/: __init__.py  c400.py  mobipix.py  pilatus_300k.py  pimega.py  vortex.py
lnls_ophyd/detectors_misc/: __init__.py  c400.py
src/lnls_ophyd/: __init__.py
src/lnls_ophyd/area_detectors/: c400.py
src/lnls_ophyd/detectors_misc/: c400.py
src/sophys/common/: __init__.py
src/sophys/common/area_detectors/: mobipix.py
src/sophys/common/devices/: __init__.py  aravis.py  c400.py  cam.py  compacteras.py  crio.py  dcm.py  dcm_lite.py  eras.py  hd_dcm.py  hddcm.py  hvps.py  ids.py  mobipix.py  motor.py  ocean.py  pgm.py  picolo.py  pilatus_300k.py  pimega.py  pmt.py  power_pmac.py  power_pmac_scan.py  shutters.py  simulated.py  slit.py  storage_ring.py  tatu.py  vortex.py  vpu.py  xpress.py  xspress.py
src/sophys/common/devices/area_detectors/: c400.py  mobipix.py  pilatus_300k.py  vortex.py
src/sophys/common/plans/: __init__.py  annotated_default_plans.py  configuration.py  cumulative_scans.py  expanded_plan_stubs.py  parallel_wrapper.py  queueserver_annotation.py  scan_with_delay.py  simulated_samples.py
src/sophys/common/utils/: __init__.py  callbacks.py  data_access.py  energy.py  instantiation.py  interfaces.py  kafka.py  packages.py  pip.py  registry.py  signals.py  status.py
src/sophys/common/utils/kafka/: __init__.py  callback.py  consumer.py  monitor.py
tests/: conftest.py  soft_ioc.py  test_picolo.py
tests/devices/: test_slits.py
tests/utils/: __init__.py  kafka_monitor.py  test_energy.py  test_instantiation.py  test_kafka_consumer.py  test_kafka_monitor.py  test_packages.py  test_pip.py  test_status.py
