[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common-sophys"
authors = [
  { name="Hugo Campos", email="hugo.campos@lnls.br" },
  { name="Thiago Ferreira", email="thiago.ferreira@lnls.br" },
]
description = "Common bluesky and ophyd utilities from SIRIUS/LNLS"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
  "bluesky",
  "ophyd",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
]

[project.urls]
"Homepage" = "https://gitlab.cnpem.br/SOL/bluesky/common-sophys"
"Bug Tracker" = "https://gitlab.cnpem.br/SOL/bluesky/common-sophys/-/issues"

[tool.setuptools.dynamic]
version = {attr = "sophys.common.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#flake8
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E704"]
