[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sophys-common"
authors = [
  { name="Hugo Campos", email="hugo.campos@lnls.br" },
  { name="Sofia Ferreira", email="thiago.ferreira@lnls.br" },
]
description = "Common bluesky and ophyd utilities from SIRIUS/LNLS"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
  "bluesky",
  "ophyd",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
]
kafka = [
  "kafka-python",
  "msgpack"
]
registry = [
  "ophyd-registry"
]
databroker = [
  "databroker"
]

[project.urls]
"Homepage" = "https://gitlab.cnpem.br/SOL/bluesky/sophys-common"
"Bug Tracker" = "https://gitlab.cnpem.br/SOL/bluesky/sophys-common/-/issues"

[tool.setuptools_scm]
version_file = "src/sophys/common/__version__.py"

[tool.setuptools.packages.find]
where = ["src"]

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#flake8
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E704"]
